--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First Website</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>CSS Position Assignment</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My First Website!</h1>
-    <p><strong>Username:</strong> sheainturfriend</p>
-    <p>
-        Hi, I'm learning web development. I love hiking and exploring new places in nature!
-    </p>
-    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Nature">
-    <br>
-    <a href="https://www.nationalgeographic.com">Visit National Geographic</a>
+  <div class="top-left">Top Left</div>
+  <div class="top-right">Top Right</div>
+  <div class="bottom-left">Bottom Left</div>
+  <div class="bottom-right">Bottom Right</div>
+  <div class="center">Center (Bonus task 🎁)</div>
 </body>
 </html>
